Fix build issues and improve code quality
- Fix regex syntax errors in DecodingStage and PatternMatchingStage
- Refactor CharacterValidationStage to reduce cognitive complexity
- Create shared AttributeParser utility to eliminate code duplication
- Modernize Cookie class to use Optional instead of @Nullable
- Add comprehensive unit tests for AttributeParser
- Fix SonarQube warnings and deprecation issues

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>